# Minecraft-Server-Daemon

./: .buildpath  .gitignore  .tern-project  Doxyfile  Makefile  Makefile.am  Makefile.in  README  README.md  aclocal.m4  bash_completion.sh  config.h  config.h.in  config.json  config.status  configure  configure.ac  log4cpp.properties  main-daemon.c++  post-install.sh
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
client/src/: ConfigurationMode.hpp  Help.hpp  MainMode.cpp  Makefile.am  Makefile.in  Message.hpp  OutputMessage.hpp  ParseOptions.hpp  Socket.cpp  Socket.hpp  WindowWrapper.hpp  client.cpp
config/: .gitignore  Makefile.am  Makefile.in  config.json.in  initd-script  log4cpp.properties.in
daemon/src/: .gitignore  Makefile.am  Makefile.in
daemon/src/Daemon/: DaemonConfigFileParser.cpp  DaemonConfigFileParser.hpp  MainLoop.cpp  MainLoop.hpp  daemon.cpp
daemon/src/IPC/: IPC.cpp  IPC.hpp  InputMessage.hpp
daemon/src/PythonExtension/: GlobalVars.hpp  PythonFunctions.cpp  PythonFunctions.hpp  ScriptHandler.cpp  ScriptHandler.hpp
daemon/src/Server/: BukkitServer.cpp  BukkitServer.hpp  BungeeCordServer.cpp  BungeeCordServer.hpp  ForgeServer.cpp  ForgeServer.hpp  GenericServer.cpp  GenericServer.hpp  Player.cpp  Player.hpp  Server.cpp  Server.hpp  ServerPropertyFileParser.hpp  ServerProtocol.cpp  ServerProtocol.hpp  SetupServers.cpp  SetupServers.hpp  SpigotServer.cpp  SpigotServer.hpp  VanillaServer.cpp  VanillaServer.hpp  test_ServerProtocol.cpp
docs/: .gitignore  Doxyfile.in  Makefile.am  Makefile.in
doxygen/: Doxyfile
doxygen/def/: doxygen.def
doxygen/docbook/: _server_process_buf_8cpp.xml  _server_process_buf_8cpp__dep__incl.md5  _server_process_buf_8cpp__incl.md5  _server_process_buf_8h.xml  _server_process_buf_8h__dep__incl.md5  _server_process_buf_8h__incl.md5  _server_stream_8cpp.xml  _server_stream_8cpp__dep__incl.md5  _server_stream_8cpp__incl.md5  _server_stream_8h.xml  _server_stream_8h__dep__incl.md5  _server_stream_8h__incl.md5  bukkit_server_8cpp.xml  bukkit_server_8cpp__dep__incl.md5  bukkit_server_8cpp__incl.md5  bukkit_server_8h.xml  bukkit_server_8h__dep__incl.md5  bukkit_server_8h__incl.md5  bungeecord_server_8cpp.xml  bungeecord_server_8cpp__dep__incl.md5  bungeecord_server_8cpp__incl.md5  bungeecord_server_8h.xml  bungeecord_server_8h__dep__incl.md5  bungeecord_server_8h__incl.md5  class_char_reader.xml  class_char_reader__coll__graph.md5  class_char_reader__inherit__graph.md5  class_json_1_1_our_char_reader.xml  class_json_1_1_our_char_reader__coll__graph.md5  class_json_1_1_our_char_reader__inherit__graph.md5  class_json_1_1_our_features.xml  class_json_1_1_our_features__coll__graph.md5  class_json_1_1_our_features__inherit__graph.md5  class_json_1_1_our_reader.xml  class_json_1_1_our_reader_1_1_error_info.xml  class_json_1_1_our_reader_1_1_error_info__coll__graph.md5  class_json_1_1_our_reader_1_1_error_info__inherit__graph.md5  class_json_1_1_our_reader_1_1_token.xml  class_json_1_1_our_reader_1_1_token__coll__graph.md5  class_json_1_1_our_reader_1_1_token__inherit__graph.md5  (+130 more)
doxygen/html/: _server_process_buf_8cpp.html  _server_process_buf_8cpp.js  _server_process_buf_8cpp__incl.map  _server_process_buf_8cpp_source.html  _server_process_buf_8h.html  _server_process_buf_8h__dep__incl.map  _server_process_buf_8h__dep__incl.md5  _server_process_buf_8h__incl.map  _server_process_buf_8h_source.html  _server_stream_8cpp.html  _server_stream_8cpp__incl.map  _server_stream_8cpp_source.html  _server_stream_8h.html  _server_stream_8h__dep__incl.map  _server_stream_8h__incl.map  _server_stream_8h__incl.md5  _server_stream_8h_source.html  annotated.html  annotated_dup.js  bukkit_server_8cpp.html  (+673 more)
src/: .gitignore  AbstractServerBase.cpp  AbstractServerBase.hpp  BukkitServer.cpp  BukkitServer.hpp  BungeeCordServer.cpp  BungeeCordServer.hpp  ConfigFileParser.cpp  ConfigFileParser.hpp  CreateSocket.cpp  CreateSocket.hpp  GenericServer.cpp  GenericServer.hpp  MainLoop.cpp  MainLoop.hpp  Makefile  Makefile.am  Makefile.in  Server.cpp  Server.hpp  ServerProcessBuf.cpp  ServerProcessBuf.h  ServerPropertyFileParser.cpp  ServerPropertyFileParser.hpp  SetupServers.cpp  SetupServers.hpp  SpigotServer.cpp  SpigotServer.hpp  VanillaServer.cpp  VanillaServer.hpp  bukkitServer.cpp  bukkitServer.h  bungeecordServer.cpp  bungeecordServer.h  client  client.cpp  connection.cpp  connection.h  createSocket.cpp  createSocket.h  (+26 more)
src/.deps/: minecraft-client.Po  minecraft-connection.Po  minecraft-jsoncpp.Po  minecraft-log.Po  minecraft-main.Po  minecraft-parser.Po  minecraft-server.Po  minecraftd-connection.Po  minecraftd-jsoncpp.Po  minecraftd-main.Po  minecraftd-parser.Po  minecraftd-server.Po
src/client/: .gitignore  CLI.cpp  CLI.hpp  ConfigurationMode.cpp  ConfigurationMode.hpp  Help.cpp  MainMode.cpp  MainMode.hpp  Makefile.am  Makefile.in  ManagementMode.cpp  ManagementMode.hpp  MasterLoop.cpp  MasterLoop.hpp  ParseOptions.cpp  PluginsMode.cpp  PluginsMode.hpp  QuitPrompt.cpp  QuitPrompt.hpp  Socket.cpp  Socket.hpp  client.cpp  helloworld.cpp
src/daemon/: .gitignore  BukkitServer.cpp  BukkitServer.hpp  BungeeCordServer.cpp  BungeeCordServer.hpp  ConfigFileParser.cpp  ConfigFileParser.hpp  CreateSocket.cpp  CreateSocket.hpp  ForgeServer.cpp  ForgeServer.hpp  GenericServer.cpp  GenericServer.hpp  GlobalVars.hpp  IPC.cpp  IPC.hpp  MainLoop.cpp  MainLoop.hpp  Makefile.am  Makefile.in  Message.hpp  OutputMessage.hpp  Player.cpp  Player.hpp  PythonFunctions.cpp  PythonFunctions.hpp  ScriptHandler.cpp  ScriptHandler.hpp  Server.cpp  Server.hpp  ServerPropertyFileParser.hpp  SetupServers.cpp  SetupServers.hpp  SpigotServer.cpp  SpigotServer.hpp  VanillaServer.cpp  VanillaServer.hpp  daemon.cpp
src/daemon/json/: .gitignore
src/web-client/: composer.json
src/web-client/html/: menu.js
src/web-client/nginx/: web-client.conf
src/web-client/src/Connection/: Message.php  Socket.php
src/web-client/src/WebSocket/: ClientConnectionInterface.php  ClientRepository.php
web-client/: .buildpath  server.php  test.py
(+798 files in other folders)
