log4cpp.properties.stamp:
	echo "Generating log4cpp.properties"
	echo Timestamp > log4cpp.properties.stamp
config.json.stamp:
	echo "Generating config.json"
	echo Timestamp > config.json.stamp
CLEANFILES = log4cpp.properties.stamp config.json.stamp

all-local: log4cpp.properties.stamp config.json.stamp
